--- a/NewsModule/NewsApp/NewsApp/Modules/List/View/Cell/FilterCollectionViewCell.xib
+++ b/NewsModule/NewsApp/NewsApp/Modules/List/View/Cell/FilterCollectionViewCell.xib
@@ -21,8 +21,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g3g-Km-PNj">
                         <rect key="frame" x="0.0" y="0.0" width="96" height="34"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="j3g-CO-QLc">
-                                <rect key="frame" x="10" y="11.5" width="15" height="11"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mark" translatesAutoresizingMaskIntoConstraints="NO" id="j3g-CO-QLc">
+                                <rect key="frame" x="10" y="9.5" width="15" height="15"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="DKe-Sh-UdQ"/>
@@ -81,7 +81,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="mark" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
